fix upload dialog z-index issue

--- a/src/app/components/layout/app-layout/app-layout.component.scss
+++ b/src/app/components/layout/app-layout/app-layout.component.scss
@@ -17,7 +17,7 @@
   }
 
   adf-file-uploading-dialog {
-    z-index: 1100;
+    z-index: 1000;
   }
 }
 
